--- a/style.css
+++ b/style.css
@@ -1,207 +1,222 @@
-body {
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Merriweather+Sans:ital,wght@1,300&family=Permanent+Marker&display=swap');
+
+* {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+
+
 }
 
-.container {
-    height: 100vh;
+body {
+    height: 100%;
     width: 100%;
 }
 
-.header {
-    background-color: #04062d;
-    height: 60vh ;
+header {
+    height: 50vh;
+    background-color :cadetblue
 }
+
+nav {
+    height: 7vh;
+    width: inherit;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .logo {
+    font-size: 27px;
+    font-family: 'Dancing Script', sans-serif;
+    padding: 5px;
+    width: 50%;
+    text-align: center;
+}
+
 .nav {
+    width: 50%;
+
+}
+
+.nav ul {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
-    height: 5vh;
+    align-items: flex-end;
 }
 
-.logo {
-    width: 20%;
-    color: white;
-    font-size: 15px;
-    height: 5vh;
-}
-
-
-
-.menu {
-    width: 30%;
-    height: 5vh;
-}
-
-ul {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-li {
+.nav ul li {
     list-style-type: none;
 }
 
-a {
+.nav ul li a {
+    color: #FAEBD7;
     text-decoration: none;
-    color: white;
-    font-size: 16px;
-}
-
-.header-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
-    height: 40vh;
-    width: 100%;
-}
-
-.header-text {
-    height: 80%;
-    width: 25%;
-    margin-left: 150px;
-    color: white;
-}
-
-.header-text h1 {
-    font-size: 50px;
-}
-
-.header-text p {
-    line-height: 25px;
-    font-size: 17px;
-}
-
-.header-text button {
-    height: 35px;
-    width: 120px;
-    color: white;
-    border: none;
-    font-size: 16px;
-    font-weight: bold;
-    background-color: #3B82F6;
-    border-radius: 8px;
-}
-
-.header-image {
-    height: 80%;
-    width: 40%;
-    margin-right: 180px;
-    background-color: gray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.header-image p{
-   color: white;
-   font-size: 25px;
-}
-
-.main-title h2 {
-    text-align: center;
-    margin-top: 50px;
-}
-
-.box-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 30vh;
-}
-
-.box {
-    height: 150px;
-    width: 150px;
-    border: 2px solid #3B82F6;
-    margin: 50px 50px 0 0;
-    border-radius: 10px;
-}
-
-.boxes {
-    height: 100%;
-}
-
-.boxes p {
-    text-align: center;
-    font-size: 15px;
-    margin-right: 50px;
-}
-
-.quote{
-    height: 40vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.quote-container {
-    height: 50%;
-    width: 50%;
-    font-size: 30px;
-}
-
-blockquote {
+    font-size: 20px;
     font-style: italic;
 }
 
-figcaption {
-    text-align: right;
-    font-weight: bold;
-    font-size: 25px;
+.nav ul li a:hover {
+    border-bottom-right-radius: 100% 50%;
+    padding: 5px 7px;
+    border-bottom: 2px solid #FAEBD7;
 }
 
-.action-banner {
+
+.main-content {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20vh;
-    margin-bottom: 150px;
+    margin-top: 50px;
+    color: #FAEBD7;
+    gap: 150px;
 }
 
-.banner-container {
-    background-color: #3B82F6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60%;
+.main-text {
     width: 50%;
-    border-radius:5px;
-}
-
-.banner-text {
-    color: white;
-}
-
-.banner-button {
-    width: 30%;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-    justify-content: center;
+
 }
 
-.banner-button button {
-    margin-top: 20px;
-    border: 2px solid white;
-    background-color: transparent;
-    color: white;
+.description {
+    width: 50%;
+}
+
+.description p {
+    margin: 25px 0;
+    font-size: 18px;
+}
+
+.description button {
+    padding: 10px 20px;
+    background-color: skyblue ;
+    border: 2px solid lightblue;
     font-size: 15px;
-    width: 100px;
-    height: 30px;
-    border-radius: 5px;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
-.footer {
-    width: 100%;
-    height: 10vh;
-    background-color: #04062d;
-    color: white;
+.main-content .pet-pics {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pet-pics img {
+    height: 300px;
+    width: auto;
+    border-radius: 10px;
+}
+
+main .animals-shelter {
+    margin-top: 50px;
+}
+
+main .animals-shelter h2{
+    text-align: center;
+    font-size: 40px;
+    font-style: italic;
+}
+
+.animal-pics {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    flex-wrap: wrap;
+    gap: 50px;
+    height: 100%;
+}
+
+.animals {
+    margin-top:  50px;
+}
+
+.animal-pics p {
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
+    border: 3px dotted skyblue;
+    background-color: #FAEBD7;
+    color: slategray;
+}
+
+.animal-pics img {
+    height: 400px;
+    width: auto;
+    box-shadow: 2px 5px 5px;
+    border-radius: 10px;
+}
+
+.about {
+    height: 50vh;
+    margin: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: cadetblue;
+    border-radius: 10px;
+}
+
+.about-text {
+    width: 50%;
+    height: auto;
+    padding: 20px;
+}
+
+.about-text p {
+    color: #FAEBD7;
+    font-size: 30px;
+    line-height: 50px;
+    letter-spacing: 0.4px;
+    font-style: italic;
+}
+
+.contact {
+    height: 20vh;
+    margin: 50px 0;
+}
+
+.banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.take-action {
+    background-color: lightblue;
+    padding: 30px;
+    border-radius: 10px ;
+    border: 2px solid lightskyblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.take-action p{
+    margin-top: 10px;
+    font-style: italic;
+}
+
+.take-action button {
+    padding: 10px 20px ;
+    margin-top: 15px;
+    border: 2px solid lightskyblue;
+    background-color: #FAEBD7;
+
+}
+
+footer {
+    height: 5vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: cadetblue;
+    font-weight: bold;
 }
